Revisi punya Dhavid

--- a/bookPage.html
+++ b/bookPage.html
@@ -78,7 +78,7 @@
                 <img src="assets/iconsBook/ic--outline-message.svg" alt="msg icon" class="textarea-icon">
                 <textarea id="message" name="message" required placeholder="YOUR MESSAGE..."></textarea>
             </label>
-            <button type="button" onclick="sendToWhatsApp()">Send via WhatsApp</button>
+            <button type="submit">Send via WhatsApp</button>
         </form>
     </div>
     <script src="js/jquery-3.7.1.min.js"></script>
