menyelesaikan menu resto page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <li class="dropdown"><a href="#" class="dropbtn">Our Menu <img src="assets/dropdown.svg" alt=""></a>
                 <ul class="dropdown-content">
-                    <li><a href="#">Menu</a></li> 
+                    <li><a href="menuPage.html">Menu</a></li> 
                     <li><a href="#">Catering</a></li>
                     <li><a href="#">Frozen Food</a></li>
                     <li><a href="#">Snack Box</a></li>
@@ -35,7 +35,7 @@
 
             <li class="dropdown hideOnMobile"><a href="#">Our Menu <img src="assets/dropdown.svg" alt=""></a>
                 <ul class="dropdown-content">
-                    <li class="hideOnMobile"><a href="#">Menu</a></li>
+                    <li class="hideOnMobile"><a href="menuPage.html">Menu</a></li>
                     <li class="hideOnMobile"><a href="#">Catering</a></li>
                     <li class="hideOnMobile"><a href="#">Frozen Food</a></li>
                     <li class="hideOnMobile"><a href="#">Snack Box</a></li>
