--- a/menuPage.html
+++ b/menuPage.html
@@ -14,54 +14,44 @@
   <body>
     <div class="header">
       <div class="logo">
-        <a href="index.html"><img src="assets/logo-ajs.svg" alt="logo" /></a>
-        <a href="index.html" class="title">ANEKA JUS SEROJA</a>
+          <a href="index.html"><img src="assets/logo-ajs.svg" alt="logo"></a> 
+          <a href="index.html" class="title">ANEKA JUS SEROJA</a>
       </div>
 
       <ul class="side-bar">
-        <li onclick="hideSidebar()">
-          <img src="assets/close.svg" alt="close" />
-        </li>
-        <li><a href="singlePage.html" class="active">Home</a></li>
+          <li onclick=hideSidebar()> <img src="assets/close.svg" alt="close"></li>
+          <li><a href="menu.html">Home</a></li>
 
-        <li class="dropdown">
-          <a href="#" class="dropbtn"
-            >Our Menu <img src="assets/dropdown.svg" alt=""
-          /></a>
-          <ul class="dropdown-content">
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">Catering</a></li>
-            <li><a href="#">Frozen Food</a></li>
-            <li><a href="#">Snack Box</a></li>
-          </ul>
-        </li>
+          <li class="dropdown"><a href="#" class="dropbtn">Our Menu <img src="assets/dropdown.svg" alt=""></a>
+              <ul class="dropdown-content">
+                  <li><a href="menuPage.html">Resto Menu</a></li> 
+                  <li><a href="menu.html#catering">Catering</a></li>
+                  <li><a href="menu.html#frozen-food">Frozen Food</a></li>
+                  <li><a href="menu.html#pudding">Pudding</a></li>
+              </ul>
+          </li>
 
-        <li><a href="#">Order</a></li>
-        <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Order</a></li>
+          <li><a href="#">Contact Us</a></li>
       </ul>
 
       <ul class="nav-bar">
-        <li class="hideOnMobile">
-          <a href="singlePage.html" class="active">Home</a>
-        </li>
+          <li class="hideOnMobile"><a href="menu.html">Home</a></li>
 
-        <li class="dropdown hideOnMobile">
-          <a href="#">Our Menu <img src="assets/dropdown-dark.svg" alt="" /></a>
-          <ul class="dropdown-content">
-            <li class="hideOnMobile"><a href="#">Menu</a></li>
-            <li class="hideOnMobile"><a href="#">Catering</a></li>
-            <li class="hideOnMobile"><a href="#">Frozen Food</a></li>
-            <li class="hideOnMobile"><a href="#">Snack Box</a></li>
-          </ul>
-        </li>
+          <li class="dropdown hideOnMobile"><a href="#">Our Menu <img src="assets/dropdown.svg" alt=""></a>
+              <ul class="dropdown-content">
+                  <li class="hideOnMobile"><a href="menuPage.html">Resto Menu</a></li>
+                  <li class="hideOnMobile"><a href="menu.html#catering">Catering</a></li>
+                  <li class="hideOnMobile"><a href="menu.html#frozen-food">Frozen Food</a></li>
+                  <li class="hideOnMobile"><a href="menu.html#pudding">Pudding</a></li>
+              </ul>
+          </li>
 
-        <li class="hideOnMobile"><a href="#">Order</a></li>
-        <li class="hideOnMobile"><a href="#">Contact Us</a></li>
-        <li onclick="showSidebar()" class="menu-bar">
-          <img src="assets/menu-dark.svg" alt="side" />
-        </li>
+          <li class="hideOnMobile"><a href="bookPage.html">Order</a></li>
+          <li class="hideOnMobile"><a href="contact.html">Contact Us</a></li>
+          <li onclick=showSidebar() class="menu-bar"> <img src="assets/menu-dark.svg" alt="side"></li>
       </ul>
-    </div>
+  </div>
 
     <div class="menu-nav">
       <ul class="menu-list">
