--- a/menuPage.html
+++ b/menuPage.html
@@ -38,7 +38,7 @@
       <ul class="nav-bar">
           <li class="hideOnMobile"><a href="menu.html">Home</a></li>
 
-          <li class="dropdown hideOnMobile"><a href="#">Our Menu <img src="assets/dropdown.svg" alt=""></a>
+          <li class="dropdown hideOnMobile"><a href="#">Our Menu <img src="assets/dropdown-dark.svg" alt=""></a>
               <ul class="dropdown-content">
                   <li class="hideOnMobile"><a href="menuPage.html">Resto Menu</a></li>
                   <li class="hideOnMobile"><a href="menu.html#catering">Catering</a></li>
