--- a/menu.html
+++ b/menu.html
@@ -28,8 +28,8 @@
                 </ul>
             </li>
   
-            <li><a href="#">Order</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="bookPage.html">Order</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
   
         <ul class="nav-bar">
