--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
                 </ul>
             </li>
   
-            <li><a href="#">Order</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="bookPage.html">Order</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
   
         <ul class="nav-bar">
