ternyata hanya masalah sepele

--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,6 @@
         </div>
     </section>
 
-    <script src="contact.js"></script>
+    <script src="js/contact.js"></script>
 </body>
 </html>
