selesai bikin responsive menu resto page

--- a/menu.html
+++ b/menu.html
@@ -150,7 +150,7 @@
                                 <li>Nasi</li>
                                 <li>Chicken Katsu</li>
                                 <li>Telur Balado</li>
-                                <li>Mie Goreng Bakso</li>
+                                <li>Mie Goreng</li>
                             </ul>
                             <hr style="margin-left: 2rem; margin-right: 2rem;">
                             <p class="card-text fw-bold" style="margin-left: 2rem; margin-right: 2rem; font-size: 12px; font-family: Tienne;">Menerima Pesanan untuk Berbagai Acara</p>
@@ -274,7 +274,7 @@
     <!-- Open Hour & History -->
 <div class="history row m-2 g-5">
     <div class="col-md-5">
-        <img src="Assets/open-hours.svg" alt="Open Hours" class="img-fluid">
+        <img src="Assets/openHour.svg" alt="Open Hours" class="img-fluid">
     </div>
     <div class="his-part col-md-7">
         <div class="his-part card border-0 rounded-0" style="width: auto">
