--- a/menuPage.html
+++ b/menuPage.html
@@ -419,6 +419,315 @@
       </div>
     </div>
 
+    <div class="container-mobile">
+      <!-- <h3 class="title-menu-list-mobile" id="juice"><u>Juices</u></h3> -->
+      <h3 class="title-menu-list-mobile" id="juice"><u>Juices</u></h3>
+      <div class="juice-mobile">
+        <div class="mobile">
+          <ul class="mobile-list">
+            <li>Jus Jambu <span class="price">Rp. 12.000</span></li>
+            <li>Jus Semangka <span class="price">Rp. 12.000</span></li>
+            <li>Jus Pepaya <span class="price">Rp. 12.000</span></li>
+            <li>Jus Tapai <span class="price">Rp. 12.000</span></li>
+            <li>Jus Mentimun <span class="price">Rp. 12.000</span></li>
+            <li>Jus Nangka <span class="price">Rp. 12.000</span></li>
+            <li>Jus Melon <span class="price">Rp. 12.000</span></li>
+            <li>Jus Tomat <span class="price">Rp. 12.000</span></li>
+            <li>Jus Wortel <span class="price">Rp. 12.000</span></li>
+            <li>Jus Sawo <span class="price">Rp. 12.000</span></li>
+            <li>Jus Jeruk <span class="price">Rp. 12.000</span></li>
+            <li>Jus Apel <span class="price">Rp. 12.000</span></li>
+            <li>Jus Mangga <span class="price">Rp. 12.000</span></li>
+            <li>Jus Naga <span class="price">Rp. 12.000</span></li>
+            <li>Jus Nanas <span class="price">Rp. 12.000</span></li>
+            <li>Jus Alpukat <span class="price">Rp. 17.000</span></li>
+            <li>Jus Sirsak <span class="price">Rp. 17.000</span></li>
+            <li>Jus Wortel + Tomat <span class="price">Rp. 17.000</span></li>
+            <li>Jus Oreo <span class="price">Rp. 12.000</span></li>
+            <li>Jus Cappucino <span class="price">Rp. 12.000</span></li>
+            <li>Es Buah Segar <span class="price">Rp. 17.000</span></li>
+            <li>Jeruk Peras Murni <span class="price">Rp. 17.000</span></li>
+          </ul>
+        </div>
+
+        <h3 class="title-menu-list-mobile"><u>Hot Drinks</u></h3>
+        <div class="drinks-mobile">
+          <div class="mobile">
+            <ul class="mobile-list">
+              <li>Kopi <span class="price">Rp. 6.000</span></li>
+              <li>Teh Panas Manis <span class="price">Rp. 6.000</span></li>
+              <li>Susu Panas <span class="price">Rp. 8.000</span></li>
+              <li>Kopi Susu <span class="price">Rp. 10.000</span></li>
+              <li>Teh Susu <span class="price">Rp. 10.000</span></li>
+              <li>Cappucino Susu <span class="price">Rp. 10.000</span></li>
+              <li>Milo Susu Panas <span class="price">Rp. 10.000</span></li>
+            </ul>
+          </div>
+
+          <h3 class="title-menu-list-mobile"><u>Cold Drinks</u></h3>
+          <div class="mobile">
+            <ul class="mobile-list">
+              <li>Es Air Putih <span class="price">Rp. 3.000</span></li>
+              <li>Es Teh Tawar <span class="price">Rp. 3.000</span></li>
+              <li>Es Teh Manis <span class="price">Rp. 5.000</span></li>
+              <li>Es Jeruk Kecil <span class="price">Rp. 7.000</span></li>
+              <li>Es Extra Joss <span class="price">Rp. 7.000</span></li>
+              <li>Es Extra Joss Susu <span class="price">Rp. 10.000</span></li>
+              <li>Es Milo Susu <span class="price">Rp. 10.000</span></li>
+              <li>Es Nam Mong <span class="price">Rp. 12.000</span></li>
+              <li>Es Jeruk Besar <span class="price">Rp. 12.000</span></li>
+            </ul>
+          </div>
+        
+          <div class="line-break">
+            <img src="assets/break.svg" alt="" />
+            <img src="assets/break.svg" alt="" />
+            <img src="assets/break.svg" alt="" />
+            <img src="assets/break.svg" alt="" />
+          </div>
+
+      <h3 class="title-menu-list-mobile" id="bakso-sapi"><u>Bakso Sapi</u></h3>
+      <div class="bakso-mobile">
+        <div class="mobile">
+          <ul class="mobile-list">
+            <li>
+              <b
+                >Tersedia (Mie Kwetiau & Mie Kuning) (+ Rp. 1.000 Mie Soun & Mie
+                Indomie)</b
+              >
+            </li>
+            <li>
+              Bakso Kosongan
+              <span class="price">Rp. 19.000</span>
+            </li>
+            <li>
+              Bakso Biasa
+              <span class="price">Rp. 19.000</span>
+            </li>
+            <li>
+              Bakso T.Puyuh
+              <span class="price">Rp. 19.000</span>
+            </li>
+            <li>
+              Bakso T.Ayam 
+              <span class="price">Rp. 23.000</span>
+            </li>
+            <li>
+              Bakso Urat 
+              <span class="price">Rp. 21.000</span>
+            </li>
+            <li>
+              Bakso Mercon 
+              <span class="price">Rp. 23.000</span>
+            </li>
+            <li>
+              Bakso Ratu 
+              <span class="price">Rp. 26.000</span>
+            </li>
+            <li>
+              Bakso Raja <span class="price">Rp. 39.000</span>
+            </li>
+            <li>
+              <h3 class="title-menu-list-mobile"><u>Extra</u></h3>
+            </li>
+            <li>Bakso Kecil Per Biji <span class="price">Rp. 2.500</span></li>
+            <li>Tahu Per Biji <span class="price">Rp. 2.500</span></li>
+            <li>
+              Bakso Telur Puyuh Per Biji
+              <span class="price">Rp. 5.000</span>
+            </li>
+            <li>
+              Bakso Telur Ayam Per Biji
+              <span class="price">Rp. 9.000</span>
+            </li>
+            <li>Bakso Urat Per Biji <span class="price">Rp. 7.000</span></li>
+            <li>Bakso Mercon Per Biji <span class="price">Rp. 9.000</span></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="line-break">
+        <img src="assets/break.svg" alt="" />
+        <img src="assets/break.svg" alt="" />
+        <img src="assets/break.svg" alt="" />
+        <img src="assets/break.svg" alt="" />
+      </div>
+
+      <h3 class="title-menu-list-mobile" id="kckt"><u>Kwetiau Goreng</u></h3>
+      <div class="kwetiau-mobile">
+        <div class="mobile">
+          <ul class="mobile-list">
+            <li>Kwetiau Goreng Biasa <span class="price">Rp. 12.000</span></li>
+            <li>Kwetiau Goreng Telur <span class="price">Rp. 16.000</span></li>
+            <li>
+              Kwetiau Goreng Spesial
+              <span class="price">Rp. 22.000</span>
+            </li>
+            <li>
+              Kwetiau Goreng Bakso Sapi Telur
+              <span class="price">Rp. 25.000</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="line-break">
+        <img src="assets/break.svg" alt="" />
+        <img src="assets/break.svg" alt="" />
+        <img src="assets/break.svg" alt="" />
+        <img src="assets/break.svg" alt="" />
+      </div>
+
+      <h3 class="title-menu-list-mobile" id="burger"><u>Burger Time</u></h3>
+      <div class="burger-mobile">
+        <div class="mobile">
+          <ul class="mobile-list">
+            <li>Burger Ayam <span class="price">Rp. 11.000</span></li>
+            <li>Burger Ayam + Keju <span class="price">Rp. 13.000</span></li>
+            <li>
+              Burger Ayam + Keju + Telur <span class="price">Rp. 17.000</span>
+            </li>
+            <li>
+              Burger Ayam + Keju + Sosis <span class="price">Rp. 17.000</span>
+            </li>
+            <li>Double Burger Ayam <span class="price">Rp. 17.000</span></li>
+            <li>
+              Double Burger Ayam + Keju <span class="price">Rp. 19.000</span>
+            </li>
+            <li>Burger Sapi <span class="price">Rp. 13.000</span></li>
+            <li>Burger Sapi + Keju <span class="price">Rp. 15.000</span></li>
+            <li>
+              Burger Sapi + Keju + Telur <span class="price">Rp. 19.000</span>
+            </li>
+            <li>
+              Burger Sapi + Keju + Sosis <span class="price">Rp. 19.000</span>
+            </li>
+            <li>Double Burger Sapi <span class="price">Rp. 19.000</span></li>
+            <li>
+              Double Burger Sapi + Keju <span class="price">Rp. 21.000</span>
+            </li>
+            <li>Burger Ayam Crispy <span class="price">Rp. 15.000</span></li>
+            <li>
+              Burger Ayam Crispy + Keju <span class="price">Rp. 17.000</span>
+            </li>
+            <li>Burger Telur <span class="price">Rp. 11.000</span></li>
+            <li>Burger Telur + Keju <span class="price">Rp. 13.000</span></li>
+            <li>Hot Dog <span class="price">Rp. 11.000</span></li>
+            <li>Hot Dog + Keju <span class="price">Rp. 13.000</span></li>
+            <li>
+              Roti Bakar
+              <span class="price">Rp. 7.000</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="line-break">
+        <img src="assets/break.svg" alt="" />
+        <img src="assets/break.svg" alt="" />
+        <img src="assets/break.svg" alt="" />
+        <img src="assets/break.svg" alt="" />
+      </div>
+
+      <h3 class="title-menu-list-mobile" id="paketnasi"><u>Paket Nasi</u></h3>
+      <div class="paketnasi-mobile">
+        <div class="mobile">
+          <ul class="mobile-list">
+            <li>
+              Nasi + Nugget + Kentang Goreng
+              <span class="price">Rp. 23.000</span>
+            </li>
+            <li>
+              Nasi + Sosis + Kentang Goreng
+              <span class="price">Rp. 21.000</span>
+            </li>
+            <li>Nasi + Nugget + Telur <span class="price">Rp. 18.000</span></li>
+            <li>Nasi + Chicken Katsu <span class="price">Rp. 17.000</span></li>
+            <li>
+              Nasi + Chicken Katsu Geprek <span class="price">Rp. 17.000</span>
+            </li>
+            <li>Nasi + Sosis + Telur <span class="price">Rp. 12.000</span></li>
+          </ul>
+        </div>
+
+        <h3 class="title-menu-list-mobile"><u>Paket Sukaku</u></h3>
+        <div class="mobile">
+          <ul class="mobile-list">
+            <li>Indomie Goreng <span class="price">Rp. 8.000</span></li>
+            <li>Indomie Kaldu <span class="price">Rp. 8.000</span></li>
+            <li>
+              Mie Goreng + Sosis + Teh Es
+              <span class="price">Rp. 15.000</span>
+            </li>
+            <li>
+              Mie Goreng + Telur + Teh Es
+              <span class="price">Rp. 15.000</span>
+            </li>
+            <li>
+              Nasi + Chicken Katsu+ Teh Es 
+              <span class="price">Rp. 20.000</span>
+            </li>
+            <li>
+              Nasi + Katsu Geprek + Teh Es
+              <span class="price">Rp. 20.000</span>
+            </li>
+          </ul>
+        </div>
+
+        <div class="line-break">
+          <img src="assets/break.svg" alt="" />
+          <img src="assets/break.svg" alt="" />
+          <img src="assets/break.svg" alt="" />
+          <img src="assets/break.svg" alt="" />
+        </div>
+
+      <h3 class="title-menu-list-mobile" id="camilan"><u>Camilan Relax</u></h3>
+      <div class="camilan-mobile">
+        <div class="mobile">
+          <ul class="mobile-list">
+            <li>Sosis <span class="price">Rp. 3000/btg</span></li>
+            <li>Haikeng <span class="price">Rp. 3000/btg</span></li>
+            <li>Bakso Ikan <span class="price">Rp. 3000/tusuk</span></li>
+            <li>Stik Ikan <span class="price">Rp. 3000/btg</span></li>
+            <li>Chicken Nugget <span class="price">Rp. 9000/porsi</span></li>
+            <li>Kentang Goreng <span class="price">Rp. 9000/porsi</span></li>
+            <li>Telur Goreng <span class="price">Rp. 5000/butir</span></li>
+            <li>Nasi Putih <span class="price">Rp. 5000/porsi</span></li>
+            <li>Niratela <span class="price">Rp. 5000/porsi</span></li>
+            <li>Telur Gulung(1 Porsi = 5 Tusuk) <span class="price">Rp. 6000/porsi</span></li>
+          </ul>
+        </div>
+      </div>
+
+      <h3 class="title-menu-list-mobile" id="nasigoreng"><u>Nasi Goreng</u></h3>
+      <div class="nasgor-mobile">
+        <div class="mobile">
+          <ul class="mobile-list">
+            <li>Nasi Goreng Biasa <span class="price">Rp. 13.000</span></li>
+            <li>Nasi Goreng Telur <span class="price">Rp. 17.000</span></li>
+            <li>Nasi Goreng Jumbo <span class="price">Rp. 16.000</span></li>
+            <li>Nasi Goreng Spesial <span class="price">Rp. 22.000</span></li>
+            <li>Nasi Goreng Spesial Jumbo <span class="price">Rp. 25.000</span></li>
+            <li>Nasi Goreng Petai <span class="price">Rp. 16.000</span></li>
+            <li>Nasi Goreng Petai Telur <span class="price">Rp. 20.000</span></li>
+            <li>Nasi Goreng Petai Jumbo <span class="price">Rp. 22.000</span></li>
+            <li>Nasi Goreng Petai Jumbo Telur <span class="price">Rp. 26.000</span></li>
+            <li>Nasi Goreng Hebi <span class="price">Rp. 18.000</span></li>
+            <li>Nasi Goreng Hebi Telur <span class="price">Rp. 22.000</span></li>
+            <li>Nasi Goreng Hebi Jumbo <span class="price">Rp. 25.000</span></li>
+            <li>Nasi Goreng Hebi Jumbo Telur <span class="price">Rp. 29.000</span></li>
+            <li>Nasi Goreng Bakso Sapi <span class="price">Rp. 22.000</span></li>
+            <li>Nasi Goreng Bakso Sapi Telur <span class="price">Rp. 26.000</span></li>
+            <li>Nasi Goreng Bakso Sapi Jumbo <span class="price">Rp. 25.000</span></li>
+            <li>Nasgor B. Sapi Jumbo Telur <span class="price">Rp. 29.000</span></li>
+            <li><h3 class="title-menu-list-mobile"><u>Extra</u></h3></li>
+            <li>Pedas Level 1 <span class="price">Rp. 1.000</span></li>
+            <li>Pedas Level 1 Ke Atas <span class="price">+Rp. 1.000 Per Level</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <script src="js/menuPage.js"></script>
   </body>
 </html>
