memperbaiki ukuran maps, memperbaiki menu nav mobile di menu resto page, menambahkan terkait penerimaan pesan antar di menu resto page

--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,7 @@
                     <li><h4 class="low"><u>Restaurant Open Time</u></h4></li>
                     <li>Open Daily (Minggu Tutup)</li>
                     <li>09.00 - 17.00 WIB (16.30 Last Order)</li>
+                    <li>Menerima Pesan Antar Untuk Sekitaran Pontianak</li>
                     <li><h4 class="low"><u>Social Media</u></h4></li>
                     <li><a href="https://www.instagram.com/anekajusseroja/" target="_blank" class="social">Aneka Jus Seroja Instagram</a></li>
                     <li><a href="https://www.facebook.com/anekajusseroja/" target="_blank" class="social">Aneka Jus Seroja Facebook</a></li>
@@ -69,7 +70,7 @@
     
             <div class="location">
                 <h4><u>Restaurant Maps Location</u></h4>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.817881250903!2d109.3396047747233!3d-0.02688059997285281!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e1d58500e072b17%3A0xbf44aa3cd6c7dbed!2sAneka%20Jus%20Seroja!5e0!3m2!1sid!2sid!4v1720626785335!5m2!1sid!2sid" width="350" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.817881250903!2d109.3396047747233!3d-0.02688059997285281!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e1d58500e072b17%3A0xbf44aa3cd6c7dbed!2sAneka%20Jus%20Seroja!5e0!3m2!1sid!2sid!4v1720626785335!5m2!1sid!2sid" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <address>Alamat : Jalan Teuku Cik Ditiro No. 15</address>
                 <button class="btn-map"><a href="https://maps.app.goo.gl/LVDmhv4pQuK1DiqD8" target="_blank">Open Google Maps</a></button>
             </div>
