--- a/menuPage.html
+++ b/menuPage.html
@@ -53,15 +53,21 @@
       </ul>
   </div>
 
+  <div class="pemesanan">
+    <h2>Menerima Pesan Antar</h2>
+    <h2>Khusus Area Pontianak</h2>
+    <h2>Dengan Minimal Pembelian 50rb</h2>
+  </div>
+
     <div class="menu-nav">
       <ul class="menu-list">
-        <li><a href="#juice">Juices</a></li>
-        <li><a href="#bakso-sapi">Bakso Sapi</a></li>
-        <li><a href="#kckt">Kwetiau Goreng</a></li>
-        <li><a href="#burger">Burger</a></li>
-        <li><a href="#camilan">Camilan</a></li>
-        <li><a href="#paketnasi">Paket Nasi</a></li>
-        <li><a href="#nasigoreng">Nasi Goreng</a></li>
+        <li><a href="#" onclick="scrollToMultipleIds('juice', 'juice2')">Juices</a></li>
+        <li><a href="#" onclick="scrollToMultipleIds('bakso-sapi', 'bakso-sapi2')">Bakso Sapi</a></li>
+        <li><a href="#" onclick="scrollToMultipleIds('kckt', 'kckt2')">Kwetiau Goreng</a></li>
+        <li><a href="#" onclick="scrollToMultipleIds('burger', 'burger2')">Burger</a></li>
+        <li><a href="#" onclick="scrollToMultipleIds('camilan', 'camilan2')">Camilan</a></li>
+        <li><a href="#" onclick="scrollToMultipleIds('paketnasi', 'paketnasi2')">Paket Nasi</a></li>
+        <li><a href="#" onclick="scrollToMultipleIds('nasigoreng', 'nasigoreng2')">Nasi Goreng</a></li>
       </ul>
     </div>
 
@@ -420,8 +426,7 @@
     </div>
 
     <div class="container-mobile">
-      <!-- <h3 class="title-menu-list-mobile" id="juice"><u>Juices</u></h3> -->
-      <h3 class="title-menu-list-mobile" id="juice"><u>Juices</u></h3>
+      <h3 class="title-menu-list-mobile" id="juice2"><u>Juices</u></h3>
       <div class="juice-mobile">
         <div class="mobile">
           <ul class="mobile-list">
@@ -486,7 +491,7 @@
             <img src="assets/break.svg" alt="" />
           </div>
 
-      <h3 class="title-menu-list-mobile" id="bakso-sapi"><u>Bakso Sapi</u></h3>
+      <h3 class="title-menu-list-mobile" id="bakso-sapi2"><u>Bakso Sapi</u></h3>
       <div class="bakso-mobile">
         <div class="mobile">
           <ul class="mobile-list">
@@ -553,7 +558,7 @@
         <img src="assets/break.svg" alt="" />
       </div>
 
-      <h3 class="title-menu-list-mobile" id="kckt"><u>Kwetiau Goreng</u></h3>
+      <h3 class="title-menu-list-mobile" id="kckt2"><u>Kwetiau Goreng</u></h3>
       <div class="kwetiau-mobile">
         <div class="mobile">
           <ul class="mobile-list">
@@ -578,7 +583,7 @@
         <img src="assets/break.svg" alt="" />
       </div>
 
-      <h3 class="title-menu-list-mobile" id="burger"><u>Burger Time</u></h3>
+      <h3 class="title-menu-list-mobile" id="burger2"><u>Burger Time</u></h3>
       <div class="burger-mobile">
         <div class="mobile">
           <ul class="mobile-list">
@@ -629,7 +634,7 @@
         <img src="assets/break.svg" alt="" />
       </div>
 
-      <h3 class="title-menu-list-mobile" id="paketnasi"><u>Paket Nasi</u></h3>
+      <h3 class="title-menu-list-mobile" id="paketnasi2"><u>Paket Nasi</u></h3>
       <div class="paketnasi-mobile">
         <div class="mobile">
           <ul class="mobile-list">
@@ -681,7 +686,7 @@
           <img src="assets/break.svg" alt="" />
         </div>
 
-      <h3 class="title-menu-list-mobile" id="camilan"><u>Camilan Relax</u></h3>
+      <h3 class="title-menu-list-mobile" id="camilan2"><u>Camilan Relax</u></h3>
       <div class="camilan-mobile">
         <div class="mobile">
           <ul class="mobile-list">
@@ -699,7 +704,7 @@
         </div>
       </div>
 
-      <h3 class="title-menu-list-mobile" id="nasigoreng"><u>Nasi Goreng</u></h3>
+      <h3 class="title-menu-list-mobile" id="nasigoreng2"><u>Nasi Goreng</u></h3>
       <div class="nasgor-mobile">
         <div class="mobile">
           <ul class="mobile-list">
