--- a/menuPage.html
+++ b/menuPage.html
@@ -371,15 +371,15 @@
       <div class="camilan">
         <div class="camilan-column">
           <ul class="camilan-list">
-            <li>Sosis <span class="price">Rp. 3000/btg</span></li>
-            <li>Haikeng <span class="price">Rp. 3000/btg</span></li>
-            <li>Bakso Ikan <span class="price">Rp. 3000/tusuk</span></li>
-            <li>Stik Ikan <span class="price">Rp. 3000/btg</span></li>
-            <li>Chicken Nugget <span class="price">Rp. 9000/porsi</span></li>
-            <li>Kentang Goreng <span class="price">Rp. 9000/porsi</span></li>
-            <li>Telur Goreng <span class="price">Rp. 5000/butir</span></li>
-            <li>Nasi Putih <span class="price">Rp. 5000/porsi</span></li>
-            <li>Niratela <span class="price">Rp. 5000/porsi</span></li>
+            <li>Sosis <span class="price">Rp. 3.000/btg</span></li>
+            <li>Haikeng <span class="price">Rp. 3.000/btg</span></li>
+            <li>Bakso Ikan <span class="price">Rp. 3.000/tusuk</span></li>
+            <li>Stik Ikan <span class="price">Rp. 3.000/btg</span></li>
+            <li>Chicken Nugget <span class="price">Rp. 9.000/porsi</span></li>
+            <li>Kentang Goreng <span class="price">Rp. 9.000/porsi</span></li>
+            <li>Telur Goreng <span class="price">Rp. 5.000/butir</span></li>
+            <li>Nasi Putih <span class="price">Rp. 5.000/porsi</span></li>
+            <li>Niratela <span class="price">Rp. 6.000/porsi</span></li>
             <li>Telur Gulung(1 Porsi = 5 Tusuk) <span class="price">Rp. 6000/porsi</span></li>
           </ul>
         </div>
@@ -569,7 +569,7 @@
               <span class="price">Rp. 22.000</span>
             </li>
             <li>
-              Kwetiau Goreng Bakso Sapi Telur
+              K. Goreng Bakso Sapi Telur
               <span class="price">Rp. 25.000</span>
             </li>
           </ul>
@@ -690,16 +690,16 @@
       <div class="camilan-mobile">
         <div class="mobile">
           <ul class="mobile-list">
-            <li>Sosis <span class="price">Rp. 3000/btg</span></li>
-            <li>Haikeng <span class="price">Rp. 3000/btg</span></li>
-            <li>Bakso Ikan <span class="price">Rp. 3000/tusuk</span></li>
-            <li>Stik Ikan <span class="price">Rp. 3000/btg</span></li>
-            <li>Chicken Nugget <span class="price">Rp. 9000/porsi</span></li>
-            <li>Kentang Goreng <span class="price">Rp. 9000/porsi</span></li>
-            <li>Telur Goreng <span class="price">Rp. 5000/butir</span></li>
-            <li>Nasi Putih <span class="price">Rp. 5000/porsi</span></li>
-            <li>Niratela <span class="price">Rp. 5000/porsi</span></li>
-            <li>Telur Gulung(1 Porsi = 5 Tusuk) <span class="price">Rp. 6000/porsi</span></li>
+            <li>Sosis <span class="price">Rp. 3.000/btg</span></li>
+            <li>Haikeng <span class="price">Rp. 3.000/btg</span></li>
+            <li>Bakso Ikan <span class="price">Rp. 3.000/tusuk</span></li>
+            <li>Stik Ikan <span class="price">Rp. 3.000/btg</span></li>
+            <li>Chicken Nugget <span class="price">Rp. 9.000/porsi</span></li>
+            <li>Kentang Goreng <span class="price">Rp. 9.000/porsi</span></li>
+            <li>Telur Goreng <span class="price">Rp. 5.000/butir</span></li>
+            <li>Nasi Putih <span class="price">Rp. 5.000/porsi</span></li>
+            <li>Niratela <span class="price">Rp. 6.000/porsi</span></li>
+            <li>Telur Gulung(1 Porsi = 5 Tusuk) <span class="price">Rp. 6.000/porsi</span></li>
           </ul>
         </div>
       </div>
